src/objects/Invoice__c.object
<CustomObject>
	<fields>
		<fullName>Account__c</fullName>
		<deleteConstraint>SetNull</deleteConstraint>
		<label>Account</label>
		<referenceTo>Account</referenceTo>
		<relationshipLabel>Invoices</relationshipLabel>
		<relationshipName>Invoices</relationshipName>
		<type>Lookup</type>
	</fields>
	<fields>
		<fullName>Invoice_Total__c</fullName>
		<label>Invoice Total</label>
		<summarizedField>Line_Item__c.Line_Item_Total__c</summarizedField>
		<summaryForeignKey>Line_Item__c.Invoice__c</summaryForeignKey>
		<summaryOperation>sum</summaryOperation>
		<type>Summary</type>
	</fields>
	<fields>
		<fullName>Status__c</fullName>
		<label>Status</label>
		<picklist>
			<picklistValues>
				<fullName>Open</fullName>
				<default>true</default>
			</picklistValues>
			<picklistValues>
				<fullName>Closed</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>Negotiating</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>Pending</fullName>
			</picklistValues>
		</picklist>
		<type>Picklist</type>
	</fields>
	<label>Invoice</label>
	<listViews>
		<fullName>All</fullName>
		<columns>Status__c</columns>
		<columns>NAME</columns>
		<columns>Invoice_Total__c</columns>
		<filterScope>Everything</filterScope>
		<label>All</label>
	</listViews>
	<nameField>
		<displayFormat>INV-{0000}</displayFormat>
		<label>Invoice Name</label>
		<type>AutoNumber</type>
	</nameField>
	<pluralLabel>Invoices</pluralLabel>
	<sharingModel>ReadWrite</sharingModel>
</CustomObject>